Style alignment fix on Chord Button

--- a/styles/ChordDisplay.module.css
+++ b/styles/ChordDisplay.module.css
@@ -14,7 +14,7 @@
     margin-inline-start: 1rem;
 }
 .cardCanvas{
-    width: 30rem;
+    width: 15rem;
 }
 #tonic{
     border: 2px solid orange;
@@ -65,12 +65,18 @@
     flex-direction: column;
     justify-content: center;
     align-self: center;
+    align-content: center;
     border-radius: 50%;
     background: none;
 }
-
+.buttonDiv{
+    width: 100%;
+    height: 100%;
+}
 .toggleSevens{
     margin: auto;
     margin-top: 0.5em;;
     padding: 1em;
 }
+
+
